<resources>
    <string name="app_name">Food Facts Checker</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="search_hint">Search a product</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="barcode">Search by barcode</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="allergens">Allergen alert</string>
    <string name="constribution">Your contributions</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some error occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="empty_email">Please provide a non-empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non-empty password.</string>
    <string-array name="nav_drawer_items_product">
        <item>Summary</item>
        <item>Ingredients</item>
        <item>Nutrition</item>
        <item>Nutrition Table</item>
    </string-array>
    <string name="website">https://world.openfoodfacts.org/</string>
    <string name="website_contribute">https://world.openfoodfacts.org/contribute</string>
    <string name="website_discover">https://world.openfoodfacts.org/discover</string>
    <string name="website_product">https://world.openfoodfacts.org/product/</string>
    <string name="website_contributor">https://world.openfoodfacts.org/contributor/</string>
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>
    <string name="nutrient_level_100g">Nutrient levels for 100g :</string>
    <string name="nutrition_level_low">in low quantity</string>
    <string name="nutrition_level_moderate">in moderate quantity</string>
    <string name="nutrition_level_high">in high quantity</string>
    <string name="toggle_flash" translatable="false">Flash</string>
    <string name="flash_on" translatable="false">Flash [ON]</string>
    <string name="flash_off" translatable="false">Flash [OFF]</string>
    <string name="ring_on" translatable="false">Ring [ON]</string>
    <string name="ring_off" translatable="false">Ring [OFF]</string>
    <string name="auto_focus_on" translatable="false">Auto Focus [ON]</string>
    <string name="auto_focus_off" translatable="false">Auto Focus [OFF]</string>
    <string name="formats" translatable="false">Formats</string>
    <string name="choose_formats" translatable="false">Choose Formats</string>
    <string name="select_camera" translatable="false">Select a Camera</string>
    <string name="ok_button" translatable="false">OK</string>
    <string name="cancel_button" translatable="false">Cancel</string>
    <string name="try_it_scan_now">Scan product</string>
    <string name="permission_camera">Camera permission is needed to scan barcodes and take pictures.</string>
    <string name="permission_title">Permission information</string>
    <string name="permission_denied">Please activate permission in the settings</string>
    <string name="permission_storage">Storage permission is needed to take or select pictures</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_no_data">No data</string>
    <string name="no_product_found">Product not found</string>
    <string name="msg_share">Look at this product on Open Food Facts :</string>
    <string name="txt_home">Open Food Facts is a open database of food products with ingredients, allergens, nutrition facts and all the tidbits of information we can find on product labels.</string>
    <string name="nutrition_carbohydrate">Carbohydrate</string>
    <string name="nutrition_carbohydrate_short_name">Carbohydrate (g)</string>
    <string name="nutrition_cholesterol">Cholesterol</string>
    <string name="nutrition_cholesterol_short_name">Cholesterol (g)</string>
    <string name="nutrition_energy">Energy</string>
    <string name="nutrition_energy_short_name">Energy</string>
    <string name="nutrition_fat">Fat</string>
    <string name="nutrition_fat_short_name">Fat (g)</string>
    <string name="nutrition_fiber">Dietary fiber</string>
    <string name="nutrition_fiber_short_name">Dietary fiber (g)</string>
    <string name="nutrition_header">Nutrition facts</string>
    <string name="nutrition_no_data_message">No data is available for this product</string>
    <string name="nutrition_per_quantity">For 100g/100ml</string>
    <string name="nutrition_proteins">Proteins</string>
    <string name="nutrition_proteins_short_name">Proteins (g)</string>
    <string name="nutrition_salt">Salt</string>
    <string name="nutrition_salt_short_name">Salt (g)</string>
    <string name="nutrition_satured_fat">Satured fat</string>
    <string name="nutrition_satured_fat_short_name">Satured fat (g)</string>
    <string name="nutrition_serving">Per serving</string>
    <string name="nutrition_serving_size">Serving size :</string>
    <string name="nutrition_sodium">Sodium</string>
    <string name="nutrition_sodium_short_name">Sodium (g)</string>
    <string name="nutrition_sugars">Sugars</string>
    <string name="nutrition_sugars_short_name">Sugars (g)</string>
    <string name="nutrition_trans_fat">Trans fat</string>
    <string name="nutrition_trans_fat_short_name">Trans fat (g)</string>
    <string name="nutriment_serving_size">Per portion : </string>
    <string name="nutrition_lactose">Lactose</string>
    <string name="nutrition_casein">Casein</string>
    <string name="nutrition_maltodextrins">Maltodextrins</string>
    <string name="nutrition_serum_proteins">Serum Proteins</string>
    <string name="nutrition_nucleotides">Nucleotides</string>
    <string name="for_100g">For 100 g</string>
    <string name="serving">Per serving</string>
    <string name="minerals">Minerals</string>
    <string name="nutrition_calcium">Calcium</string>
    <string name="nutrition_potassium">Potassium</string>
    <string name="nutrition_chlore">Chlorine</string>
    <string name="nutrition_magnesium">Magnesium</string>
    <string name="nutrition_taurine">Taurine</string>
    <string name="nutrition_monounsaturatedFat">Mono unsaturated fat</string>
    <string name="nutrition_polyunsaturatedFat">Poly unsaturated fat</string>
    <string name="nutrition_omega3">Omega 3</string>
    <string name="nutrition_omega6">Omega 6</string>
    <string name="nutrition_omega9">Omega 9</string>
    <string name="nutrition_sucrose">Sucrose</string>
    <string name="nutrition_glucose">Glucose</string>
    <string name="nutrition_fructose">Fructose</string>
    <string name="nutrition_maltose">Maltose</string>
    <string name="nutrition_alcohol">Alcohol</string>
    <string name="nutrition_vitamins">Vitamins</string>
    <string name="vitamin_a">Vitamin A</string>
    <string name="vitamin_d">Vitamin d</string>
    <string name="vitamin_e">Vitamin e</string>
    <string name="vitamin_k">Vitamin k</string>
    <string name="vitamin_c">Vitamin C</string>
    <string name="vitamin_b1">Vitamin B1</string>
    <string name="vitamin_b2">Vitamin B2</string>
    <string name="vitamin_pp">Vitamin PP</string>
    <string name="vitamin_b6">Vitamin B6</string>
    <string name="vitamin_b9">Vitamin B9</string>
    <string name="vitamin_b12">Vitamin B12</string>
    <string name="biotin">Biotin</string>
    <string name="pantothenic_acid">Pantothenic acid</string>
    <string name="nutrition_minerals">Minerals</string>
    <string name="silica">Silica</string>
    <string name="bicarbonate">Bicarbonate</string>
    <string name="potassium">Potassium</string>
    <string name="chloride">Chloride</string>
    <string name="calcium">Calcium</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="iron">Iron</string>
    <string name="magnesium">Magnesium</string>
    <string name="zinc">Zinc</string>
    <string name="copper">Copper</string>
    <string name="manganese">Manganese</string>
    <string name="fluoride">Fluoride</string>
    <string name="selenium">Selenium</string>
    <string name="chromium">Chromium</string>
    <string name="molybdenum">Molybdenum</string>
    <string name="iodine">Iodine</string>
    <string name="caffeine">Caffeine</string>
    <string name="taurine">Taurine</string>
    <string name="ph">pH</string>
    <string name="fruits_vegetables_nuts">Fruits, vegetables, nuts</string>
    <string name="collagen_meat_protein_ratio">Collagen meat protein ratio</string>
    <string name="cocoa">Cocoa</string>
    <string name="chlorophyl">Chlorophyl</string>
    <string name="take_picture_ingredients">Take a picture of the ingredients</string>
    <string name="take_picture_front">Take a picture of the front</string>
    <string name="take_picture_nutrition_table">Take a picture of the nutrition table</string>
    <string name="take_more_pictures">Take more pictures</string>
    <string name="txt_barcode">Barcode :</string>
    <string name="txt_quantity">Quantity :</string>
    <string name="txt_packaging">Packaging :</string>
    <string name="txt_brands">Brands :</string>
    <string name="txt_categories">Categories :</string>
    <string name="txt_labels">Labels, certifications, awards :</string>
    <string name="txt_manufacturing">Manufacturing or processing places :</string>
    <string name="txt_ingredients_origins">Origin of ingredients :</string>
    <string name="txt_city">City, state and country where purchased :</string>
    <string name="txt_stores">Stores :</string>
    <string name="txt_countries">Countries where sold :</string>
    <string name="txt_ingredients">Ingredients list :</string>
    <string name="txt_substances">Substances or products causing allergies or intolerances :</string>
    <string name="txt_additives">Additives :</string>
    <string name="txt_traces">Traces :</string>
    <string name="txt_may_be_from_palm_oil_product">Ingredients that may be from palm oil :</string>
    <string name="txt_palm_oil_product">Ingredients from palm oil :</string>
    <string name="txt_serving_size">Serving size :</string>
    <string name="txt_nutrient_level100g">Nutrient levels for 100g :</string>
    <string name="txt_nutrition_levelLow">in low quantity</string>
    <string name="txt_nutrition_level_moderate">in moderate quantity</string>
    <string name="txt_nutrition_level_high">in high quantity</string>
    <string name="txt_allergens_palm_oil">"Palm oil"</string>
    <string name="txt_allergens_gluten">"Gluten"</string>
    <string name="txt_allergens_eggs">"Eggs"</string>
    <string name="txt_allergens_fish">"Fish"</string>
    <string name="txt_allergens_soy">"Soy"</string>
    <string name="txt_allergens_milk">"Milk"</string>
    <string name="txt_allergens_nuts">"Nuts"</string>
    <string name="txt_on">On</string>
    <string name="txt_off">Off</string>
</resources>